--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "BASE_URL": "https://shz.al",
-  "REPO": "https://github.com/SharzyL/pastebin-worker",
-  "FAVICON": "https://sharzy.in/favicon-32x32.png"
+  "BASE_URL": "https://gt.gs",
+  "REPO": "https://github.com/godad/pastebin-worker",
+  "FAVICON": "https://blog.gt.gs/wp-content/uploads/2023/03/avatar.jpg"
 }
