--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "BASE_URL": "https://gt.gs",
+  "BASE_URL": "https://txt.gt.gs",
   "REPO": "https://github.com/godad/pastebin-worker",
   "FAVICON": "https://blog.gt.gs/wp-content/uploads/2023/03/avatar.jpg"
 }
